--- a/client/src/components/Recipe/Recipe.css
+++ b/client/src/components/Recipe/Recipe.css
@@ -68,6 +68,7 @@
     width: 100%;
     max-width: 600px;
     height: 100%;
+    max-height: 389px;
     -webkit-transform: scale(1.12);
     transform: scale(1.12);
     -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
